<resources>
    <string name="app_name">StepGoal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="steps">Steps: 2400</string>
    <string name="goal">Goal: 6000</string>
    <string name="heading">Daily Step Count</string>
    <string name="time">1 hour 30 minutes</string>
    <string name="calories">950 kcal</string>
    <string name="distance">0.00 km</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="login">Login</string>
    <string name="username2">Username</string>
    <string name="password2">Password</string>
    <string name="login_page">Login Page</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register1">Register</string>
    <string name="email1">Email</string>
    <string name="confirm_password5">Confirm Password</string>
    <string name="password5">Password</string>
    <string name="register9">Register</string>
    <string name="email6">Email</string>
    <string name="register79">Register</string>
    <string name="first_name1">First Name</string>
    <string name="personal_information1">Personal Information</string>
    <string name="_1751">175</string>
    <string name="_92">92</string>
    <string name="last_name2">Last Name</string>
    <string name="weight2">Weight (kg)</string>
    <string name="age2">Age</string>
    <string name="height2">Height (m)</string>
    <string name="karl2">Karl</string>
    <string name="dicks3">Dicks</string>
    <string name="null1">null</string>
    <string name="null3">null</string>
    <string name="null4">null</string>
    <string name="null5">null</string>
    <string name="_21">21</string>
    <string name="save1">Save</string>
    <string name="username5">Username</string>
    <string name="units">Metric / Imperial</string>
    <string name="goals">Set Your Goals</string>
    <string name="daily_step_count">Daily Step Count</string>
    <string name="_6000">6000</string>
    <string name="target_weight">Target Weight (kg)</string>
    <string name="_85">85</string>
    <string name="weight_goal">Weight Goal</string>
    <string name="weight_monitoring">Weight Monitoring</string>
    <string name="current_target_85kg">Current Target: 85kg</string>
    <string name="target_85kg">Target: 85kg</string>
    <string name="current_weight">Current Weight</string>
    <string name="enter_current_weight">Enter Current Weight</string>
    <string name="add">Add</string>
    <string name="enter_current_weight_kg">Enter Current Weight (kg)</string>
    <string name="step_count_log">Step Count Log</string>
    <string name="target_6000">Target: 6000</string>
    <string name="steps2">Steps</string>
    <string name="step_goal_6000">Step Goal: 6000</string>
    <string name="capture_image">Capture Image</string>
    <string name="scroll_down_on_the_image_to_view_new_images">Scroll down on the image to view new images.</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="_175">175</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="calculate">Calculate</string>
    <string name="result_27_5">Result: 27.5</string>
    <string name="height_ft">Height (ft)</string>
    <string name="weight_lb">Weight (lb)</string>
    <string name="_69">69</string>
    <string name="_203">203</string>
    <string name="login22">Login</string>
    <string name="height_in">Height (in)</string>
    <string name="step_history">Step History</string>
    <string name="weight_kg11">Weight (kg)</string>
    <string name="current_weight_kg43">Current Weight (kg)</string>
    <string name="steps5re6">Steps</string>
    <string name="_0000">0</string>
    <string name="enter_date">Enter Date</string>
    <string name="add_weight_record">Add Weight Record</string>
    <string name="add_record">Add Record</string>
    <string name="capture_progress">Capture Progress</string>
    <string name="take_picture">Take Picture</string>
    <string name="please_enter_your_details1">Please Enter Your Details</string>
    <string name="title_activity_profile_setup">ProfileSetup</string>
    <string name="stepgoal_pedometer60">StepGoal Pedometer</string>
    <string name="hello_user">Hello User!</string>
    <string name="save_step_count7">Save Step Count</string>
    <string name="next1">Next</string>
    <string name="view_weight_trends">View Weight Trends</string>
    <string name="progress">Progress</string>
    <string name="weight_goal5">Weight Goal</string>
    <string name="current_weight_0_kg">Current Weight: 0 kg</string>
    <string name="weight_left_0_kg">Weight Left: 0 kg</string>
    <string name="metric_imperial">Metric / Imperial</string>
</resources>
