<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileSetup"
    android:background="#d3d6db"
    tools:ignore="LabelFor"
    android:focusable="true" android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/edAge"
        android:layout_width="178dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:digits="0123456789"
        app:layout_constraintEnd_toEndOf="@+id/edHeight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edHeight"
        app:layout_constraintTop_toBottomOf="@+id/edHeight"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView71"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:fontFamily="sans-serif"
        android:paddingTop="10dp"
        android:text="@string/first_name1"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/edFName"
        app:layout_constraintEnd_toStartOf="@+id/edFName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edFName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:fontFamily="sans-serif"
        android:paddingTop="10dp"
        android:text="@string/height_cm"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/edHeight"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/edHeight"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:fontFamily="sans-serif"
        android:paddingTop="10dp"
        android:text="@string/last_name2"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/edLName"
        app:layout_constraintEnd_toEndOf="@+id/textView71"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView71"
        app:layout_constraintTop_toTopOf="@+id/edLName" />

    <EditText
        android:id="@+id/edHeight"
        android:layout_width="178dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:digits="0123456789"
        app:layout_constraintBottom_toTopOf="@+id/edAge"
        app:layout_constraintEnd_toEndOf="@+id/edWeight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edWeight"
        app:layout_constraintTop_toBottomOf="@+id/edWeight"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edLName"
        android:layout_width="178dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edWeight"
        app:layout_constraintEnd_toEndOf="@+id/edFName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edFName"
        app:layout_constraintTop_toBottomOf="@+id/edFName"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edFName"
        android:layout_width="178dp"
        android:layout_height="43dp"
        android:layout_marginTop="65dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edLName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView71"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edWeight"
        android:layout_width="178dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:digits="0123456789"
        app:layout_constraintBottom_toTopOf="@+id/edHeight"
        app:layout_constraintEnd_toEndOf="@+id/edLName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edLName"
        app:layout_constraintTop_toBottomOf="@+id/edLName"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/please_enter_your_details1"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:fontFamily="sans-serif"
        android:paddingTop="10dp"
        android:text="@string/age2"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/edAge"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/edAge"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:fontFamily="sans-serif"
        android:paddingTop="10dp"
        android:text="@string/weight_kg11"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/edWeight"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/edWeight"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundbutton"
        android:backgroundTint="#5c8dd6"
        android:fontFamily="sans-serif"
        android:text="@string/register1"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edAge"
        app:layout_constraintVertical_bias="0.747" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/units"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edAge" />

</androidx.constraintlayout.widget.ConstraintLayout>