<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d3d6db"
    tools:context=".Bmi"
    tools:ignore="LabelFor"
    android:focusable="true" android:focusableInTouchMode="true">

    <Switch
        android:id="@+id/switch6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/units"
        app:layout_constraintBottom_toTopOf="@+id/calculateBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edHeight" />

    <TextView
        android:id="@+id/textView70"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:paddingTop="10dp"
        android:text="@string/weight"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edWeight"
        app:layout_constraintEnd_toStartOf="@+id/edWeight"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edWeight"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edWeight"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="150dp"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="sans-serif"
        android:importantForAutofill="no"
        android:inputType="number"
        android:digits="0123456789"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading2"
        app:layout_constraintVertical_bias="0.394"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edHeight"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:importantForAutofill="no"
        android:inputType="number"
        android:digits="0123456789"
        app:layout_constraintEnd_toEndOf="@+id/edWeight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edWeight"
        app:layout_constraintTop_toBottomOf="@+id/edWeight"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView71"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif"
        android:paddingTop="10dp"
        android:text="@string/height_cm"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edHeight"
        app:layout_constraintEnd_toStartOf="@+id/edHeight"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/textView70"
        app:layout_constraintTop_toTopOf="@+id/edHeight"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvHeading2"
        android:layout_width="377dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/bmi_calculator"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calculateBtn"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/roundbutton"
        android:backgroundTintMode="multiply"
        android:fontFamily="sans-serif"
        android:shadowColor="#00C22727"
        android:text="@string/calculate"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch6" />

    <TextView
        android:id="@+id/resultTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/edWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading2" />
</androidx.constraintlayout.widget.ConstraintLayout>